--- a/README
+++ b/README
@@ -21,9 +21,7 @@ This project is licensed under GPL-3.0 license.
 1. Datasheet: https://www.st.com/resource/en/datasheet/stm32f446re.pdf
 2. Manual: https://www.st.com/resource/en/reference_manual/rm0390-stm32f446xx-advanced-armbased-32bit-mcus-stmicroelectronics.pdf
 3. HAL (Hardware Abstraction Layer) Manual: https://www.st.com/resource/en/user_manual/dm00154093-description-of-stm32f1-hal-and-lowlayer-drivers-stmicroelectronics.pdf
-
-## Pinout
-![Example Image](https://github.com/levietduc0712/NUCLEO_F446RE/blob/main/Image/nucleo_f446re_morpho_left_2021_10_26.png)
+4. Pinout: https://os.mbed.com/platforms/ST-Nucleo-F446RE/
 
 Happy coding with NUCLEO-F446RE!
 
